--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -9,9 +9,8 @@
 name: Upload Python Package
 
 on:
-    push:
-      tags:
-      - '*'
+  release:
+    types: [published]
 
 permissions:
   contents: read
