--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,3 +33,9 @@ dependencies = [
 
 [tool.black]
 target-version = ["py39", "py310"]
+
+[tool.isort]
+# https://github.com/PyCQA/isort/wiki/isort-Settings
+profile = "black"
+# will group `import x` and `from x import` of the same module.
+force_sort_within_sections = true
