--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,3 +30,12 @@ dependencies = [
 [project.urls]
 "Homepage" = "https://github.com/cjaliaga/aioaquarea"
 "Bug Tracker" = "https://github.com/cjaliaga/aioaquarea/issues"
+
+[tool.black]
+target-version = ["py39", "py310"]
+
+[tool.isort]
+# https://github.com/PyCQA/isort/wiki/isort-Settings
+profile = "black"
+# will group `import x` and `from x import` of the same module.
+force_sort_within_sections = true
