--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -2,6 +2,9 @@ categories:
   - title: "⚠ Breaking Changes"
     labels:
       - "breaking-change"
+  - title: "🐛 Bug Fixes"
+    labels:
+      - "bug"
   - title: "⬆️ Dependencies"
     collapse-after: 1
     labels:
