--- a/custom_components/aquarea/manifest.json
+++ b/custom_components/aquarea/manifest.json
@@ -10,7 +10,9 @@
     "integration_type": "device",
     "iot_class": "cloud_polling",
     "issue_tracker": "https://github.com/wpatrik14/aioaquarea/issues",
-    "requirements": [],
+    "requirements": [
+        "aiohttp"
+    ],
     "version": "1.0.0",
     "ssdp": [],
     "zeroconf": []
