--- a/custom_components/aquarea/manifest.json
+++ b/custom_components/aquarea/manifest.json
@@ -13,7 +13,7 @@
     "iot_class": "cloud_polling",
     "issue_tracker": "https://github.com/wpatrik14/aioaquarea/issues",
     "requirements": [
-        "aiohttp==3.12.14"
+        "aiohttp<4.0"
     ],
     "version": "1.0.1",
     "ssdp": [],
