feat: Implement Aquarea consumption management and device control
- Added AquareaConsumptionManager for retrieving device consumption data.
- Introduced AquareaDeviceControl for managing device operations and statuses.
- Enhanced decorators for authentication handling in API requests.
- Developed DeviceManager for managing device information and statuses.
- Created entities for device and tank implementations to facilitate interaction.
- Updated example script to demonstrate usage of the new features.

Co-authored-by: Marcos Lopez DeFelipe<marcos.defelipe@podero.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,8 @@ classifiers = [
 ]
 dependencies = [
   "aiohttp",
-  'StrEnum; python_version < "3.11"'
+  'StrEnum; python_version < "3.11"',
+  "bs4"
 ]
 
 [project.urls]
